include/moonlitt.h

/**
 * Opaque engine handle exposed to C callers.
 */
typedef struct EngineHandle EngineHandle;
/**
 * Opaque mixer handle for pre-building a mixer before creating a Runtime.
 */
typedef struct MixerHandle MixerHandle;
/**
 * Opaque runtime handle exposed to C callers.
 */
typedef struct RuntimeHandle RuntimeHandle;
/**
 * Status code returned by fallible moonlitt functions.
 * `0` = success; negative values classify the failure.
 */
typedef int32_t MoonlittStatus;
/**
 * Create a new engine handle with no backend loaded.
 *
 * * `sample_rate` — Hz, must be > 0 (typical: 44100 or 48000)
 * * `buffer_size` — frames per render block, must be > 0 (typical: 256)
 *
 * Returns an owned opaque pointer (free with `moonlitt_engine_destroy`),
 * or NULL with a last-error message if the configuration is invalid.
 */
struct EngineHandle *moonlitt_engine_create(int sample_rate, int buffer_size);
/**
 * Destroy an engine handle and its backend. Safe to call with NULL.
 * After this the pointer is dangling — do not use it again.
 */
void moonlitt_engine_destroy(struct EngineHandle *e);
/**
 * Load a plugin or soundfont; the format is detected from the file
 * extension (`.sf2` / `.vst3` / `.clap`). Replaces any backend that was
 * already loaded.
 *
 * Returns `MOONLITT_OK`, `MOONLITT_ERR_INVALID_ARG` (NULL handle/path),
 * `MOONLITT_ERR_IO` (file missing/unreadable) or `MOONLITT_ERR_PLUGIN`
 * (the file exists but the backend failed to initialise).
 */
MoonlittStatus moonlitt_engine_load(struct EngineHandle *e, const char *path);
/**
 * Drop the loaded backend (if any). Safe on NULL and on an engine with
 * nothing loaded; never fails.
 */
void moonlitt_engine_unload(struct EngineHandle *e);
/**
 * Returns 1 if a backend is loaded, 0 otherwise (including NULL handle).
 */
int moonlitt_engine_is_loaded(struct EngineHandle *e);
/**
 * Start a note.
 *
 * * `ch`   — MIDI channel, 0..=15
 * * `note` — MIDI note number, 0..=127 (60 = middle C)
 * * `vel`  — velocity, 0..=127 (0 is interpreted as note-off by MIDI
 *   convention; backends follow it)
 */
MoonlittStatus moonlitt_engine_note_on(struct EngineHandle *e, int ch, int note, int vel);
/**
 * Release a note. `ch` 0..=15, `note` 0..=127.
 */
MoonlittStatus moonlitt_engine_note_off(struct EngineHandle *e, int ch, int note);
/**
 * Send a MIDI control change. `ch` 0..=15, `cc` 0..=127, `val` 0..=127.
 * Common controllers: 1 = mod wheel, 7 = volume, 11 = expression,
 * 64 = sustain pedal.
 */
MoonlittStatus moonlitt_engine_cc(struct EngineHandle *e, int ch, int cc, int val);
/**
 * Send a pitch-bend. `ch` 0..=15, `val` -8192..=8191 (0 = centre).
 */
MoonlittStatus moonlitt_engine_pitch_bend(struct EngineHandle *e, int ch, int val);
/**
 * Switch program/patch on a channel. `ch` 0..=15, `prog` 0..=127.
 * For VST3 sampler-style plugins prefer `moonlitt_engine_load_preset`.
 */
MoonlittStatus moonlitt_engine_program_change(struct EngineHandle *e, int ch, int prog);
/**
 * Release every sounding note on every channel.
 */
MoonlittStatus moonlitt_engine_all_notes_off(struct EngineHandle *e);
/**
 * Set the backend's output volume. `volume` is linear gain (1.0 =
 * unity); NaN is rejected.
 */
MoonlittStatus moonlitt_engine_set_volume(struct EngineHandle *e, float volume);
/**
 * List the loaded backend's presets as JSON `[{"id","name"}, …]`.
 * An empty list (`[]`) means the backend exposes no presets.
 *
 * Ownership: caller frees with `moonlitt_free_string`. Returns NULL
 * (with NOT_LOADED / INVALID_ARG detail) when no backend is loaded.
 */
char *moonlitt_engine_get_presets(struct EngineHandle *e);
/**
 * Number of automatable parameters on the loaded backend (0 when
 * nothing is loaded or the handle is NULL).
 */
int moonlitt_engine_param_count(struct EngineHandle *e);
/**
 * All parameter metadata as JSON
 * `[{"id","name","group","min","max","default","step_count","flags"}, …]`.
 *
 * Ownership: caller frees with `moonlitt_free_string`. Returns NULL
 * when no backend is loaded.
 */
char *moonlitt_engine_param_info_json(struct EngineHandle *e);
/**
 * Current value of parameter `id`, or NaN when the handle/backend/id
 * is invalid (documented sentinel — check with `isnan`).
 */
double moonlitt_engine_get_param(struct EngineHandle *e, int id);
/**
 * Set parameter `id` to `value` (normalised to the range reported in
 * `moonlitt_engine_param_info_json`). NaN and negative ids are rejected.
 */
MoonlittStatus moonlitt_engine_set_param(struct EngineHandle *e, int id, double value);
/**
 * Human-readable display string for a parameter value (e.g. `"-6.0 dB"`).
 *
 * Ownership: caller frees with `moonlitt_free_string`. Returns NULL when
 * the handle/backend/id is invalid.
 */
char *moonlitt_engine_param_display(struct EngineHandle *e, int id, double value);
/**
 * Create a live-audio runtime from an engine handle.
 *
 * **Ownership**: the backend is consumed out of `engine_handle` only on
 * success. On failure (e.g. no audio output device) the backend is put
 * back, so the caller may retry or keep using the engine offline. The
 * (now empty) engine handle must still be destroyed eventually.
 *
 * Returns NULL + last-error on failure.
 */
struct RuntimeHandle *moonlitt_runtime_create(struct EngineHandle *engine_handle);
/**
 * Destroy a runtime handle: stops audio output and frees resources.
 * Safe to call with NULL.
 */
void moonlitt_runtime_destroy(struct RuntimeHandle *rt);
/**
 * Start a note. `ch` 0..=15, `note` 0..=127, `vel` 0..=127.
 */
MoonlittStatus moonlitt_runtime_note_on(struct RuntimeHandle *rt, int ch, int note, int vel);
/**
 * Note-on delayed by `delay_samples` frames for sample-accurate timing
 * (`delay_samples` >= 0; at 48 kHz one frame ≈ 21 µs).
 */
MoonlittStatus moonlitt_runtime_note_on_delayed(struct RuntimeHandle *rt,
                                                int ch,
                                                int note,
                                                int vel,
                                                int delay_samples);
/**
 * Release a note. `ch` 0..=15, `note` 0..=127.
 */
MoonlittStatus moonlitt_runtime_note_off(struct RuntimeHandle *rt, int ch, int note);
/**
 * Note-off delayed by `delay_samples` frames (>= 0).
 */
MoonlittStatus moonlitt_runtime_note_off_delayed(struct RuntimeHandle *rt,
                                                 int ch,
                                                 int note,
                                                 int delay_samples);
/**
 * Send a MIDI control change. `ch` 0..=15, `cc` 0..=127, `val` 0..=127.
 * Common controllers: 1 = mod wheel, 7 = volume, 11 = expression,
 * 64 = sustain pedal.
 */
MoonlittStatus moonlitt_runtime_cc(struct RuntimeHandle *rt, int ch, int cc, int val);
/**
 * Send a pitch-bend. `ch` 0..=15, `val` -8192..=8191 (0 = centre).
 */
MoonlittStatus moonlitt_runtime_pitch_bend(struct RuntimeHandle *rt, int ch, int val);
/**
 * Switch program/patch on a channel. `ch` 0..=15, `prog` 0..=127.
 */
MoonlittStatus moonlitt_runtime_program_change(struct RuntimeHandle *rt, int ch, int prog);
/**
 * Release every sounding note on every channel.
 */
MoonlittStatus moonlitt_runtime_all_notes_off(struct RuntimeHandle *rt);
/**
 * Set the source backend's output volume (linear gain, 1.0 = unity).
 */
MoonlittStatus moonlitt_runtime_set_volume(struct RuntimeHandle *rt, float volume);
/**
 * Set backend parameter `id` to `value` (f64, matching the engine-side
 * parameter precision).
 */
MoonlittStatus moonlitt_runtime_set_param(struct RuntimeHandle *rt, int id, double value);
/**
 * Add a track at runtime. **Consumes** the backend out of
 * `engine_handle`. `channel_mask`: bit N = MIDI channel N (0xFFFF = all).
 * Returns the track id (>= 0), or a negative [`MoonlittStatus`].
 */
int moonlitt_runtime_add_track(struct RuntimeHandle *rt,
                               struct EngineHandle *engine_handle,
                               int channel_mask);
/**
 * Remove a track at runtime (notes are silenced first). Unknown ids
 * are ignored by the audio thread.
 */
MoonlittStatus moonlitt_runtime_remove_track(struct RuntimeHandle *rt, int track_id);
/**
 * Add an insert effect to a track at runtime. **Consumes** the backend.
 * Returns the insert id (>= 0), or a negative [`MoonlittStatus`].
 */
int moonlitt_runtime_add_insert(struct RuntimeHandle *rt,
                                int track_id,
                                struct EngineHandle *engine_handle);
/**
 * Remove an insert effect from a track at runtime. Unknown ids are
 * ignored by the audio thread.
 */
MoonlittStatus moonlitt_runtime_remove_insert(struct RuntimeHandle *rt,
                                              int track_id,
                                              int insert_id);
/**
 * Add a send bus at runtime. **Consumes** the backend. Returns the bus
 * id (>= 0), or a negative [`MoonlittStatus`].
 */
int moonlitt_runtime_add_send_bus(struct RuntimeHandle *rt, struct EngineHandle *engine_handle);
/**
 * List available MIDI input devices as JSON `[{"id","name"}, …]`.
 *
 * Ownership: caller frees with `moonlitt_free_string`. Returns NULL +
 * last-error when the MIDI subsystem is unavailable.
 */
char *moonlitt_runtime_list_midi_inputs(void);
/**
 * Stop sequencer playback and rewind to the start.
 * (The audio stream itself is controlled by
 * `moonlitt_runtime_start_audio` / `moonlitt_runtime_stop_audio`.)
 */
MoonlittStatus moonlitt_runtime_stop(struct RuntimeHandle *rt);
/**
 * Create an 8-band parametric EQ engine.
 */
struct EngineHandle *moonlitt_builtin_create_eq(int sample_rate, int buffer_size);
/**
 * Create a dynamics compressor engine.
 */
struct EngineHandle *moonlitt_builtin_create_compressor(int sample_rate, int buffer_size);
/**
 * Create a stereo reverb engine (Dattorro plate algorithm).
 */
struct EngineHandle *moonlitt_builtin_create_reverb(int sample_rate, int buffer_size);
/**
 * Create a new Mixer for pre-building (tracks → sends → inserts →
 * `moonlitt_runtime_create_from_mixer`).
 *
 * Ownership: free with `moonlitt_mixer_destroy` unless consumed by
 * `moonlitt_runtime_create_from_mixer`.
 */
struct MixerHandle *moonlitt_mixer_create(int sample_rate, int buffer_size);
/**
 * Destroy a mixer handle. Safe to call with NULL. Only needed when the
 * mixer was NOT consumed by `moonlitt_runtime_create_from_mixer`.
 */
void moonlitt_mixer_destroy(struct MixerHandle *m);
/**
 * Add a track to a pre-built mixer. **Consumes** the backend out of
 * `engine_handle` (the empty handle must still be destroyed).
 *
 * * `channel_mask` — bitmask of MIDI channels this track responds to
 *   (bit N = channel N; 0xFFFF = all)
 *
 * Returns the track id (>= 0), or a negative [`MoonlittStatus`].
 */
int moonlitt_mixer_add_track(struct MixerHandle *m,
                             struct EngineHandle *engine_handle,
                             int channel_mask);
/**
 * Add a send bus to a pre-built mixer. **Consumes** the backend.
 * Returns the bus id (>= 0), or a negative [`MoonlittStatus`].
 */
int moonlitt_mixer_add_send_bus(struct MixerHandle *m, struct EngineHandle *engine_handle);
/**
 * Add an insert effect to a track of a pre-built mixer. **Consumes**
 * the backend. Returns the insert id (>= 0), or a negative
 * [`MoonlittStatus`] (`INVALID_ARG` when the track id is unknown).
 */
int moonlitt_mixer_add_insert(struct MixerHandle *m,
                              int track_id,
                              struct EngineHandle *engine_handle);
/**
 * Create a Runtime (live audio output) from a pre-built mixer.
 * **Consumes** the mixer on success. Returns NULL + last-error on
 * failure (e.g. no audio output device).
 */
struct RuntimeHandle *moonlitt_runtime_create_from_mixer(struct MixerHandle *m, int buffer_size);
/**
 * Create a 16-track mixer + live runtime from a single SF2 file: the
 * SF2 is loaded ONCE and each MIDI channel's track clones the font
 * (Arc-shared sample data, ~1× memory instead of 16×).
 *
 * Ownership: returns an owned RuntimeHandle* (free with
 * `moonlitt_runtime_destroy`), or NULL + last-error.
 */
struct RuntimeHandle *moonlitt_multitrack_create(const char *sf2_path,
                                                 int sample_rate,
                                                 int buffer_size);
/**
 * Free a string previously returned by any `moonlitt_*` function that
 * documents "caller must free with `moonlitt_free_string`".
 */
void moonlitt_free_string(char *s);